# cht-chatbot

./: .gitignore  README.md  prd.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py  utils.py
src/cli/: interface.py
src/core/: document_processor.py  embeddings.py  rag_chain.py
src/scraper/: scraper.py
src/web/: app.py
