[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cht-chatbot"
version = "0.1.0"
description = "CHT Chatbot"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain",
    "beautifulsoup4",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false
